convert json to html

--- a/index.html
+++ b/index.html
@@ -9,18 +9,38 @@
 </head>
     <body>  
         <div class="container-fluid">
-            <div class="searchform">
-                <form>
-                    <label for="search">Поиск по yandex.xml</label>
-                    <input id="search" type="text">
-                </form>
+            <div class="search">
+                <div class="search-form">
+                    <form id="form">
+                        <label for="search">Поиск по yandex.xml</label>
+                        <input id="search" type="text">
+                    </form>
+                </div>
+
+                <div class="search-output">
+                    <div class="item">
+                        <div class="item_image">
+                            <img src="https://morepara.ru/files/products/labsiwg10ii.800x600w.jpg?c4191df22eaecd0320e311659d9da8f7" alt="img">
+                        </div>
+                        
+                        <div class="item_description">
+                            <div class="type">
+                                Категория
+                            </div>
+                            <div class="name">
+                                Cartel Don Corleone 6 мг 30 мл
+                            </div>
+                            <div class="price">
+                                1290
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
     </body>
 </html>
